--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: natcourtID
 Type: Package
-Title: Generate ID codes for the Wallerman et al. National Courts dataset
-Version: 0.1.0
+Title: Generate ID codes for the Wallerman et al. National Courts data set
+Version: 1.0
 Author: Stein Arne Brekke
 Maintainer: Stein Arne Brekke <stein.brekke@eui.eu>
-Description: Simply generates court ID codes for use with various data bases.
-License: What license is it under?
+Description: Generates national court ID codes for use with various data bases.
+License: GNU General Public License v3.0
 Encoding: UTF-8
 LazyData: true
